<resources>

    <string-array name="sort_array">
        <item>No Selection</item>
        <item>Id</item>
        <item>Name</item>
        <item>HireDate</item>
        <item>Gender</item>
        <item>Dept</item>
    </string-array>

    <string name="sort_by">Sort By</string>
    <string name="app_name">EmployeeManagementSystem</string>
    <string name="date_picker_title">Hire Date</string>
    <string name="new_employee">New Employee</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="choose_menu">Choose a Menu Option</string>
    <string name="view_all_employees">View All Employees</string>
    <string name="remove_employee">Remove Employee</string>
    <string name="update_employee">Update Employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="gender">Gender</string>
    <string name="add_last_name">Last Name</string>
    <string name="add_first_name">First Name</string>
    <string name="string_male">Male</string>
    <string name="string_female">Female</string>
    <string name="add_date">Hire Date (DD/MM/YYYY)</string>
    <string name="add_dept">Department</string>
    <string name="enter_employee_id">Enter Your Employee Id</string>
    <string name="settings">Settings</string>

    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>
    <dimen name="header_margin">10dp</dimen>
    <dimen name="text_size">20sp</dimen>
    <dimen name="header_bottom_margin">30dp</dimen>
    <dimen name="view_padding">10dp</dimen>
    <dimen name="add_edit_textsize">18dp</dimen>
    <dimen name="button_width">200dp</dimen>
    <dimen name="button_padding">20dp</dimen>
    <dimen name="button_height">50dp</dimen>


</resources>
