<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddUpdateEmployee">

<de.hdodenhof.circleimageview.CircleImageView
    android:layout_width="150sp"
    android:layout_height="150sp"
    android:layout_marginTop="30sp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/circular_image"
    android:onClick="chooseImage"
    android:src="@mipmap/ic_launcher"/>

        <EditText
            android:layout_marginTop="30sp"
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_first_name" />
        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_last_name"
            android:padding="@dimen/view_padding"
            android:textSize="@dimen/add_edit_textsize"/>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/view_padding">

            <TextView
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:id="@+id/text_view_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/add_edit_textsize"
                android:paddingRight="25dp"/>
            <RadioGroup
                android:layout_marginLeft="50sp"
                android:layout_marginTop="10sp"
                android:id="@+id/radio_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="25dp">


                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_male"
                    android:textSize="@dimen/add_edit_textsize"
                    android:checked="true"/>

                <RadioButton
                    android:layout_marginLeft="10sp"
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_female"
                    android:textSize="@dimen/add_edit_textsize"/>

            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/view_padding">

            <EditText
                android:id="@+id/edit_text_hire_date"
                android:hint="@string/add_date"
                android:layout_width="wrap_content"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:gravity="left" />
            <ImageView
                android:id="@+id/image_view_hire_date"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:layout_weight="5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/edit_text_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_dept"
            />
        <Button
            android:id="@+id/button_add_update_employee"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:text="@string/add_employee"
            android:layout_gravity="center"/>
    </LinearLayout>